--- a/pom.xml
+++ b/pom.xml
@@ -192,6 +192,12 @@
             <version>2.3.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.23.2</version>
+        </dependency>
+
         <!-- testing -->
 
         <dependency>
@@ -225,13 +231,6 @@
             <artifactId>mysql</artifactId>
             <version>1.18.1</version>
             <scope>test</scope>
-        </dependency>
-
-        <!-- hot swapping, live reload -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <optional>true</optional>
         </dependency>
 
     </dependencies>
