--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,6 @@
 
         <zeebe.version>8.2.4</zeebe.version>
         <version.zeebe.spring>8.2.0</version.zeebe.spring>
-        <hazelcast.exporter.version>1.2.1</hazelcast.exporter.version>
 
         <spring.boot.version>2.7.5</spring.boot.version>
         <!-- pin Hazelcast version because of spring-boot-dependencies -->
@@ -33,10 +32,6 @@
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
 
-        <nexus.snapshot.repository>https://artifacts.camunda.com/artifactory/zeebe-io-snapshots/
-        </nexus.snapshot.repository>
-        <nexus.release.repository>https://artifacts.camunda.com/artifactory/zeebe-io/
-        </nexus.release.repository>
 
         <!-- disable jdk8 javadoc checks on release build -->
         <plugin.version.javadoc>3.1.1</plugin.version.javadoc>
@@ -64,21 +59,23 @@
             </dependency>
 
             <dependency>
-                <groupId>io.zeebe.hazelcast</groupId>
-                <artifactId>zeebe-hazelcast-connector</artifactId>
-                <version>${hazelcast.exporter.version}</version>
-            </dependency>
-
-            <dependency>
                 <groupId>com.h2database</groupId>
                 <artifactId>h2</artifactId>
                 <version>2.1.214</version>
             </dependency>
-
         </dependencies>
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.zeebe</groupId>
+            <artifactId>zeebe-kafka-exporter-serde</artifactId>
+            <version>3.1.2-SNAPSHOT</version>
+        </dependency>
 
         <!-- spring deps-->
         <dependency>
@@ -118,11 +115,6 @@
         </dependency>
 
         <dependency>
-            <groupId>io.zeebe.hazelcast</groupId>
-            <artifactId>zeebe-hazelcast-connector</artifactId>
-        </dependency>
-
-        <dependency>
             <groupId>com.querydsl</groupId>
             <artifactId>querydsl-apt</artifactId>
             <version>5.0.0</version>
@@ -137,12 +129,6 @@
         </dependency>
 
         <dependency>
-            <groupId>com.hazelcast</groupId>
-            <artifactId>hazelcast</artifactId>
-            <version>${version.hazelcast}</version>
-        </dependency>
-
-        <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <scope>compile</scope>
@@ -154,10 +140,6 @@
             <artifactId>postgresql</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-        </dependency>
 
         <!-- js libs -->
 
@@ -330,37 +312,7 @@
                 </configuration>
             </plugin>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>3.5.0</version>
-                <executions>
-                    <execution>
-                        <id>copy</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>copy</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <artifactItems>
-                        <artifactItem>
-                            <groupId>io.zeebe.hazelcast</groupId>
-                            <artifactId>zeebe-hazelcast-exporter</artifactId>
-                            <version>${hazelcast.exporter.version}</version>
-                            <type>jar</type>
-                            <classifier>jar-with-dependencies</classifier>
-                            <overWrite>true</overWrite>
-                            <outputDirectory>${project.build.directory}/exporter</outputDirectory>
-                            <destFileName>zeebe-hazelcast-exporter.jar</destFileName>
-                        </artifactItem>
-                    </artifactItems>
-                    <outputDirectory>${project.build.directory}/libs</outputDirectory>
-                    <overWriteReleases>false</overWriteReleases>
-                    <overWriteSnapshots>true</overWriteSnapshots>
-                </configuration>
-            </plugin>
+
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -396,69 +348,5 @@
         </plugins>
     </build>
 
-    <profiles>
-        <profile>
-            <id>community-action-maven-release</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-gpg-plugin</artifactId>
-                        <version>3.0.1</version>
-                        <executions>
-                            <execution>
-                                <id>sign-artifacts</id>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>sign</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                        <configuration>
-                            <!-- Prevent gpg from using pinentry programs -->
-                            <gpgArguments>
-                                <arg>--pinentry-mode</arg>
-                                <arg>loopback</arg>
-                            </gpgArguments>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-
-    </profiles>
-
-    <repositories>
-        <repository>
-            <id>zeebe</id>
-            <name>Zeebe Repository</name>
-            <url>https://artifacts.camunda.com/artifactory/zeebe-io/</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-
-        <repository>
-            <id>zeebe-snapshots</id>
-            <name>Zeebe Snapshot Repository</name>
-            <url>https://artifacts.camunda.com/artifactory/zeebe-io-snapshots/</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
-
-    <scm>
-        <url>https://github.com/camunda-community-hub/zeebe-simple-monitor</url>
-        <connection>scm:git:git@github.com:camunda-community-hub/zeebe-simple-monitor.git</connection>
-        <developerConnection>scm:git:git@github.com:camunda-community-hub/zeebe-simple-monitor.git</developerConnection>
-        <tag>HEAD</tag>
-    </scm>
 
 </project>
